# granule-plugin

./: CMakeLists.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AllpassFilter.cpp  AllpassFilter.h  CircularBuffer.h  CombFilter.cpp  CombFilter.h  DiffusionNetwork.cpp  DiffusionNetwork.h  EarlyReflections.cpp  EarlyReflections.h  GrainEngine.cpp  GrainEngine.h  GrainVoice.h  LFO.cpp  LFO.h
landing/: index.html
public/: GranularReverbProcessor.js
src/: App.tsx  license.ts  main.tsx
src/audio/: AudioEngine.ts  InputManager.ts  MidiManager.ts
src/components/: GrainVisualiser.tsx  KnobControl.tsx  MidiLearnModal.tsx  PluginShell.tsx  PresetBar.tsx  SectionPanel.tsx  ToggleButton.tsx  VUMeter.tsx
src/presets/: factory.ts
src/store/: pluginStore.ts
src/styles/: plugin.css
